--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/opochiman/index.html",
   "display": "fullscreen",
   "theme_color": "#33ccff",
   "background_color": "#112233"
